<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text_view"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/varela"
        android:background="@color/colorBlue"
        android:textColor="#FFF"
        android:paddingVertical="30dp"
        android:paddingHorizontal="30dp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/fill_details_layout"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_your_details"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/varela"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/name_layout"
        android:layout_marginTop="30dp"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_text_view"
            android:textSize="18sp"
            android:layout_weight="1"
            android:fontFamily="@font/varela"
            />

        <EditText
            android:id="@+id/fullname_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="3"
            android:fontFamily="@font/varela"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        android:id="@+id/phone_layout"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_text_view"
            android:textSize="18sp"
            android:layout_weight="1"
            android:fontFamily="@font/varela"
            />

        <EditText
            android:id="@+id/phone_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="phone"
            android:layout_weight="4"
            android:fontFamily="@font/varela"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        android:id="@+id/address_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/street_text_view"
            android:textSize="18sp"
            android:layout_weight="1"
            android:fontFamily="@font/varela"
            />

        <EditText
            android:id="@+id/street_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_weight="2"
            android:fontFamily="@font/varela"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city_text_view"
            android:textSize="18sp"
            android:fontFamily="@font/varela"
            />

        <EditText
            android:id="@+id/city_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_weight="2"
            android:fontFamily="@font/varela"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        android:id="@+id/home_number_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_number_text_view"
            android:textSize="18sp"
            android:fontFamily="@font/varela"
            />

        <EditText
            android:id="@+id/house_ed"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="number"
            android:fontFamily="@font/varela"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apartment_text_view"
            android:textSize="18sp"
            android:fontFamily="@font/varela"
            />

        <EditText
            android:id="@+id/apartment_ed"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="number"
            android:fontFamily="@font/varela"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:gravity="end|bottom"
        android:id="@+id/finish_btn_layout">

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:fontFamily="@font/varela"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="#FFF"
            android:background="@drawable/shape_selectior"
            />


    </LinearLayout>


</LinearLayout>